update time convert function

--- a/client/src/app/Containers/big/big.component.html
+++ b/client/src/app/Containers/big/big.component.html
@@ -1,7 +1,5 @@
 <div class="bigscreen" 
-  [ngClass]="{
-    'bigscreen--theme-black' : theme
-  }"
+  [ngClass]="theme"
 >
 
   <div class="bigscreen_box bigscreen__stoptime">
