--- a/client/src/app/Containers/small/small.component.html
+++ b/client/src/app/Containers/small/small.component.html
@@ -1,4 +1,7 @@
 <div class="smallscreen smallscreen--theme-white">
-    <div>{{ takt }}</div>
-    <div>{{ clock }}</div>    
+    <div>{{ takt.time }}</div>
+    <div>{{ takt.andonMessage }}</div>
+    <div>{{ takt.andonMessage }}</div>
+    <div>{{ clock }}</div> 
+    <app-status-bar></app-status-bar>   
 </div>
