--- a/client/src/app/Containers/big/big.component.css
+++ b/client/src/app/Containers/big/big.component.css
@@ -17,8 +17,8 @@
 
 .bigscreen_box {
   display: flex;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 2%;
+  margin-bottom: 2%;
   flex: 1 1 auto;
   justify-content: center;
   align-content: center;
@@ -35,5 +35,7 @@
 .bigscreen_box--value {
   display: flex;
   align-self: center;
-  font-size: 12vh;
+  margin-top: 3%;
+  font-weight: 400;
+  font-size: 14vh;
 }
