minor changes on small takt

--- a/client/src/app/Containers/small/small.component.html
+++ b/client/src/app/Containers/small/small.component.html
@@ -1,7 +1,6 @@
 <div class="smallscreen smallscreen--theme-white">
-    <div>{{ takt.time }}</div>
-    <div>{{ takt.andonMessage }}</div>
-    <div>{{ takt.andonMessage }}</div>
-    <div>{{ clock }}</div> 
+    <div class="smallscreen__takt">{{ takt.timeString }}</div>
+    <div class="smallscreen__andon-message">{{ takt.andonMessage }}</div>    
+    <div class="smallscreen__clock">{{ clock }}</div> 
     <app-status-bar></app-status-bar>   
 </div>
