--- a/client/src/app/Containers/big/big.component.html
+++ b/client/src/app/Containers/big/big.component.html
@@ -24,7 +24,7 @@
 
   <div class="bigscreen_box bigscreen__directrun" *ngIf >
     <div class="bigscreen_box--title">DR CHASSIS</div>
-    <div class="bigscreen_box--value">{{ takt.directrun }}</div>
+    <div class="bigscreen_box--value">{{ takt.directRun }}</div>
   </div>
 
   <div class="bigscreen_box bigscreen__directrun-geral">
