--- a/client/src/app/Containers/small/small.component.html
+++ b/client/src/app/Containers/small/small.component.html
@@ -1,6 +1,8 @@
-<div class="smallscreen smallscreen--theme-white">
+<div class="smallscreen" [ngClass]="theme">
     <div class="smallscreen__takt">{{ takt.timeString }}</div>
-    <div class="smallscreen__andon-message">{{ takt.andonMessage }}</div>    
-    <div class="smallscreen__clock">{{ clock }}</div> 
-    <app-status-bar></app-status-bar>   
+    <div>
+        <div class="smallscreen__andon-message ">{{ takt.andonMessage }}</div>
+    </div>
+    <div class="smallscreen__clock">{{ clock }}</div>
+    <!-- <app-status-bar></app-status-bar> -->
 </div>
