--- a/client/src/app/Containers/small/small.component.css
+++ b/client/src/app/Containers/small/small.component.css
@@ -23,30 +23,43 @@
 }
 
 .smallscreen--theme-stop-time {
-    background: #ff2222;
+    background: #FF1111;
     color: #fafafa;
 }
 
 .smallscreen--theme-stop-plan {
-    background: #ff2222;
+    background: #1111FF;
     color: #fafafa;
 }
 
 .smallscreen__takt {
+    display: flex;
+    width: 100%;
+    font-size: 37vw;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.smallscreen__andon-message {
     display: flex;
     flex: 1 1 auto;
     margin: 0 auto;
     width: 100%;
     text-align: center;
     font-weight: bold;
-    font-size: 30vw;
-    border: 1px solid black;
-}
-
-.smallscreen__andon-message {
-    display: flex;
+    font-size: 40vw;
 }
 
 .smallscreen__clock {
     display: flex;
+    flex: 1 1 auto;
+    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    flex: 1 1 auto;
+    margin: 0 auto;
+    justify-content: center;
+    width: 100%;
+    font-weight: bold;
+    font-size: 8vw;
 }
